Bug 119579 - Crash/Freeze when Insert Special Characters drop down control is in drop down and Help dialog is click on (not gtk3)
Summary: Crash/Freeze when Insert Special Characters drop down control is in drop down...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords: haveBacktrace
Depends on:
Blocks: Special-Character
  Show dependency treegraph
 
Reported: 2018-08-29 02:15 UTC by Jim Raykowski
Modified: 2018-09-03 14:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (8.89 KB, text/plain)
2018-08-29 22:18 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-08-29 02:15:07 UTC
Steps to reproduce in Writer: 

1) Drop down the Insert Special Characters dropdown control in the standard toolbar
2) press F1
Help dialog appears
3) Click anywhere in the Help dialog 

Result: crash in linux, hang in windows

Versions reproduced in:

Version: 6.2.0.0.alpha0+
Build ID: cce69378e2b425c205a7ae5b74f0c126e89d5342
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: threaded

Result:CRASH

Version: 6.0.2.1 (x64) --> Need to customize toolbar in this version to include the control
Build ID: f7f06a8f319e4b62f9bc5095aa112a65d2f3ac89
CPU threads: 4; OS: Windows 10.0; UI render: default;
Locale: en-US (en_US); Calc: group

and

Version: 6.2.0.0.alpha0+ (x64)
Build ID: c3554e77056b6c950fe946c7c53dd93838e17c9a
CPU threads: 4; OS: Windows 10.0; UI render: default;
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-08-20_00:07:06
Locale: en-US (en_US); Calc: threaded

Result:HANG
Comment 1 Xisco Faulí 2018-08-29 10:29:05 UTC
I can't reproduce it in

Version: 6.2.0.0.alpha0+
Build ID: 3bd8316718fdfed454c01a9c4ae6af6beb34437d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

when I press F1, the browser is open...
Comment 2 Telesto 2018-08-29 11:14:56 UTC
Repro
Version: 6.2.0.0.alpha0+
Build ID: 414ef6cb187dd3bbcc917dbedf3c0c1cc8668f60
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-08-20_22:43:18
Locale: nl-NL (nl_NL); Calc: CL
Comment 3 Julien Nabet 2018-08-29 21:15:43 UTC
On pc Debian x86-64 with master sources updated today + gtk3/gtk or gen rendering, I don't reproduce this.

Any chance for a bt?
Comment 4 Jim Raykowski 2018-08-29 22:18:07 UTC
Created attachment 144541 [details]
backtrace

backtrace from:

Version: 6.2.0.0.alpha0+
Build ID: cce69378e2b425c205a7ae5b74f0c126e89d5342
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: threaded
Comment 5 Julien Nabet 2018-08-30 08:30:58 UTC
Thank you Jim for your feedback.
Comment 6 Xisco Faulí 2018-08-30 08:37:07 UTC
Ok, I can reproduce it in

Version: 6.2.0.0.alpha0+
Build ID: 3bd8316718fdfed454c01a9c4ae6af6beb34437d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

but not with GTK3

In order to show the help confirmation dialog, I launched LibreOffice in safe-mode
Comment 7 Xisco Faulí 2018-08-30 08:49:03 UTC
Also reproduced in

Version: 6.0.0.0.alpha1+
Build ID: 6eeac3539ea4cac32d126c5e24141f262eb5a4d9
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

(oldest commit in bibisect-linux64-6.1 ).

In bibisect-linux64-6.0 the old offline help window is displayed instead.

@Caolán, I thought you could be interested in this issue...
Comment 8 Commit Notification 2018-08-30 15:36:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eac4bd8e3c84ba4afe153e42cc82b263f62b5e11

tdf#119579 skip floating windows as potential parent for missing help dialog

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2018-08-30 15:36:35 UTC
that seems to work for me, backport to 6-1 in gerrit
Comment 10 Commit Notification 2018-09-03 14:35:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e6a0d77e144cf41459cc1124244638e562b8d0db&h=libreoffice-6-1

tdf#119579 skip floating windows as potential parent for missing help dialog

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.