tdf#119579 skip floating windows as potential parent for missing help dialog

Change-Id: Ibcee9a6aab0b04bf52f3e75a46f52d98864eee4c
Reviewed-on: https://gerrit.libreoffice.org/59809
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>